sub div in adash, added js folder,

--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -9,7 +9,9 @@
 <body>
   <div>
     {% include 'navbar.html' %}
-    
+    {% for message in messages %} 
+      <p class="text-red-500 font-medium mb-2 absolute top-2 right-0 mt-10 animate-fade-out delay-2000">{{message}}</p> 
+    {% endfor %}
   </div>
 
   <div class="h-auto my-5 lg:flex items-center justify-center mx-auto max-w-[95%] lg:max-w-[1180px]">
@@ -17,9 +19,7 @@
       <div class="grid gap-4 mx-4 lg:max-w-[50%]">
         <div>
           <h1 class="text-[30px] lg:text-[40px]">Log In</h1>
-          {% for message in messages %} 
-            <p class="text-red-500 font-medium mb-2">{{message}}</p> 
-          {% endfor %}
+          
         </div>
         <div class="grid gap-4">
           <p class="leading-8 sm:text-[16px] lg:text-xl text-gray-600">Your education journey continues, login to our system to access your resources.</p>
@@ -63,7 +63,25 @@
     </div>
   </div>
 </body>
-
+<style>
+  @keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
+  
+  .animate-fade-out {
+    animation: fadeOut 0.5s ease-out forwards;
+  }
+  
+  .delay-2000 {
+    animation-delay: 2s;
+  }
+  
+</style>
 
 
 
