--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -214,16 +214,20 @@
         </div>
       </div>
     </div>
+    
   
     <div id="subjects" class="md:px-32 py-8 w-full h-auto flex items-center justify-center pt-5 mb-20 lg:mb-0">
       <div class="flex flex-col">
         <div class="text-center">
           <h2 class="text-2xl font-bold mb-4 ">Subjects</h2>
         </div>
-        {% for subject in subjects %}
+        
         <div class="grid grid-flow-row sm:grid-cols-2 gap-10 grid-cols-1 content-center justify-items-center lg:grid-cols-3">
+          {% for subject in subjects %}
           <div class="bg-white hover:shadow-lg  rounded-lg">
+            
             <div class="relative block rounded-md border border-gray-100 p-4 shadow-xl w-[350px] h-[200px]">
+              
               <div class=" items-center mt-2 h-full justify-center">       
                 <h3 class="uppercase text-xl font-semibold text-teal-600">
                   {{subject}}
@@ -235,8 +239,9 @@
                         
                         
                           {% comment %} <span class="uppercase text-base ">Taught in:</span> {{subject.faculty}} Semester {{subject.semester}}  {% endcomment %}
-                  <span class="uppercase text-base ">Semester Credit hours: 3</span>
-                  <div class="mt-2"><span class="rounded-md px-2 py-1 bg-green-800 text-white">{{subject.notice}}</span><div>
+                  <span class="uppercase text-base ">Semester Credit hours: 3</span><br>
+                </p>
+                <div class="mt-2"><span class="rounded-md px-2 py-1 bg-green-800 text-white">{{subject.notice}}</span></div>
                       
                   <br>
                   {% if group == "admin" %}
@@ -246,12 +251,14 @@
                         <button type="submit" class="rounded bg-gray-100 p-2 text-teal-600 font-sm hover:bg-teal-600 hover:text-white">Submit</button>
                     </form>
                   {% endif %}
-                </p>
+                
               </div>
+              
             </div>
           </div>
+          {% endfor %}
         </div>
-        {% endfor %}
+        
       </div>
     </div>  
   </div>
