--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -64,7 +64,7 @@
                                                 </div>
                                                 <div class="flex justify-end items-center w-100 border-t p-3">
                                                     <button type="button" class="bg-gray-400  px-3 py-1 rounded text-white mr-1 closeModal">Cancel</button>
-                                                    <button class="bg-teal-600 hover:bg-teal-700 px-3 py-1 rounded text-white">Submit</button>
+                                                    <button class="bg-teal-600 hover:bg-teal-700 px-3 py-1 rounded text-white" onsubmit="passwordValidator()">Submit</button>
                                                 </div>
                                             </form>
                                         </div>
