--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -1,24 +1,15 @@
-{% include 'navbar.html' %} {% load static %}
-{% comment %} <link rel="stylesheet" href="{% static 'images/js/script.js' %}"> {% endcomment %}
+{% include 'navbar.html' %} {% load static %} {% comment %}
+<link rel="stylesheet" href="{% static 'images/js/script.js' %}"> {% endcomment %}
 <script src="{% static 'images/js/script.js' %}"></script>
 
 <body>
-  <div>
-    <div
-      class="h-auto w-full flex items-center justify-center pt-5 mb-20 lg:mb-0"
-    >
-      <div
-        class="bg-gray-50 h-auto lg:p-6 p-4 flex justify-center items-center w-full max-w-[95%] lg:max-w-[1200px] shadow-lg"
-      >
-        <div
-          class="flex-col flex md:flex-row py-10 lg:py-0 mx-5 gap-6 md:mx-0 md:gap-0 md:justify-evenly w-full"
-        >
-          <div class="relative inline-flex flex-col">
-            <div class="inline-flex items-center gap-4">
-              <button
-                class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex"
-                data-dropdown-toggle="dropdown"
-              >
+    <div>
+        <div class="h-auto w-full flex items-center justify-center pt-5 mb-20 lg:mb-0">
+            <div class="bg-gray-50 h-auto lg:p-6 p-4 flex justify-center items-center w-full max-w-[95%] lg:max-w-[1200px] shadow-lg">
+                <div class="flex-col flex md:flex-row py-10 lg:py-0 mx-5 gap-6 md:mx-0 md:gap-0 md:justify-evenly w-full">
+                    <div class="relative inline-flex flex-col">
+                        <div class="inline-flex items-center gap-4">
+                            <button class="max-w-[150px] text-[20px]font-bold text-xl hover:text-teal-500 cursor-pointer inline-flex" data-dropdown-toggle="dropdown">
                 Semesters<svg
                   class="w-4 h-7 ml-2"
                   fill="none"
@@ -34,18 +25,12 @@
                   ></path>
                 </svg>
               </button>
-            </div>
-            <div
-              class="static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden"
-              id="dropdown"
-            >
-              <ul class="" aria-labelledby="dropdown">
-                {% for i in semesters %}
-                <li>
-                  <a
-                    href="{% url 'students-by-semester' faculty i %}"
-                    class="px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap"
-                    >Semester {{i}}</a
+                        </div>
+                        <div class="static left-0 bg-gray-50 z-10 top-full rounded-md p-4 hidden" id="dropdown">
+                            <ul class="" aria-labelledby="dropdown">
+                                {% for i in semesters %}
+                                <li>
+                                    <a href="{% url 'students-by-semester' faculty i %}" class="px-4 py-2 flex p-2 rounded-md hover:text-teal-500 hover:bg-gray-100 whitespace-nowrap">Semester {{i}}</a
                   >
                 </li>
                 {% endfor %}
@@ -204,77 +189,74 @@
                             <td class="text-left py-3 px-4 md:table-cell">{{student.faculty}}</td>
                             <td class="text-left py-3 px-4 md:table-cell">
                                 <a class="hover:text-teal-500" href="{% url 'delete-account' student.username%}">Delete</a>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-              </div>
+                                    </td>
+                                    </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                    </table>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-      </div>
-    </div>
-    
-  
-    <div id="subjects" class="md:px-32 py-8 w-full h-auto flex items-center justify-center pt-5 mb-20 lg:mb-0">
-      <div class="flex flex-col">
-        <div class="text-center">
-          <h2 class="text-2xl font-bold mb-4 ">Subjects</h2>
-        </div>
-        
-        <div class="grid grid-flow-row sm:grid-cols-2 gap-10 grid-cols-1 content-center justify-items-center lg:grid-cols-3">
-          {% for subject in subjects %}
-          <div class="bg-white hover:shadow-lg  rounded-lg">
-            
-            <div class="relative block rounded-md border border-gray-100 p-4 shadow-xl w-[350px] h-[200px]">
-              
-              <div class=" items-center mt-2 h-full justify-center">       
-                <h3 class="uppercase text-xl font-semibold text-teal-600">
-                  {{subject}}
-                </h3>
-                <p >
-                          
-                  <span class="uppercase text-base">Teacher:</span>
-                  {{subject.teacher.first_name}} {{subject.teacher.last_name}}<br>
-                        
-                        
-                          {% comment %} <span class="uppercase text-base ">Taught in:</span> {{subject.faculty}} Semester {{subject.semester}}  {% endcomment %}
-                  <span class="uppercase text-base ">Semester Credit hours: 3</span><br>
-                </p>
-                <div class="mt-2"><span class="rounded-md px-2 py-1 bg-green-800 text-white">{{subject.notice}}</span></div>
-                      
-                  <br>
-                  {% if group == "admin" %}
-                    <form method="POST">
-                      {% csrf_token %}
-                        <input type="text" name="notice">
-                        <button type="submit" class="rounded bg-gray-100 p-2 text-teal-600 font-sm hover:bg-teal-600 hover:text-white">Submit</button>
-                    </form>
-                  {% endif %}
-                
-              </div>
-              
-            </div>
-          </div>
-          {% endfor %}
-        </div>
-        
-      </div>
-    </div>  
-  </div>
-  {% comment %} <script>
-    const subject = document.querySelector(".subject");
-    const showsub = document.querySelector(".showSub");
-    const closesub = document.querySelectorAll(".closeSub");
 
-    showsub.addEventListener("click", function () {
-      subject.classList.remove("hidden");
-      subject.classList.add("flex");
-    });
-    closesub.forEach((close) => {
-      close.addEventListener("click", function () {
-        subject.classList.add("hidden");
-      });
-    });
-  </script> {% endcomment %}
+
+        <div id="subjects" class="md:px-32 py-8 w-full h-auto flex items-center justify-center pt-5 mb-20 lg:mb-0">
+            <div class="flex flex-col">
+                <div class="text-center">
+                    <h2 class="text-2xl font-bold mb-4 ">Subjects</h2>
+                </div>
+
+                <div class="grid grid-flow-row sm:grid-cols-2 gap-10 grid-cols-1 content-center justify-items-center lg:grid-cols-3">
+                    {% for subject in subjects %}
+                    <div class="bg-white hover:shadow-lg  rounded-lg">
+
+                        <div class="relative block rounded-md border border-gray-100 p-4 shadow-xl w-[350px] h-[200px]">
+
+                            <div class=" items-center mt-2 h-full justify-center">
+                                <h3 class="uppercase text-xl font-semibold text-teal-600">
+                                    {{subject}}
+                                </h3>
+                                <p>
+
+                                    <span class="uppercase text-base">Teacher:</span> {{subject.teacher.first_name}} {{subject.teacher.last_name}}<br>
+
+                                    <span class="uppercase text-base ">Semester Credit hours: 3</span><br>
+                                </p>
+                                <div class="mt-2"><span class="rounded-md px-2 py-1 bg-green-800 text-white">{{subject.notice}}</span></div>
+
+                                <br>
+                                <form method="POST">
+                                    {% csrf_token %}
+                                    <input type="text" name="notice">
+                                    <button type="submit" class="rounded bg-gray-100 p-2 text-teal-600 font-sm hover:bg-teal-600 hover:text-white">Submit</button>
+                                </form>
+
+
+                            </div>
+
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+
+            </div>
+        </div>
+    </div>
+    {% comment %}
+    <script>
+        const subject = document.querySelector(".subject");
+        const showsub = document.querySelector(".showSub");
+        const closesub = document.querySelectorAll(".closeSub");
+
+        showsub.addEventListener("click", function() {
+            subject.classList.remove("hidden");
+            subject.classList.add("flex");
+        });
+        closesub.forEach((close) => {
+            close.addEventListener("click", function() {
+                subject.classList.add("hidden");
+            });
+        });
+    </script> {% endcomment %}
 </body>
