--- a/account/templates/sdash.html
+++ b/account/templates/sdash.html
@@ -7,10 +7,10 @@
                 <h1 class="text-3xl darktext font-bold text-center">
                     Welcome {{user.first_name}} {{user.last_name}}
                 </h1>
-                <span class="font-semi-bold text-lg"><br />
-          {{user.faculty}} {{user.semester}} <sup>th</sup> semester</span
-        >
-      </div>
+                <span class="font-semi-bold text-lg"><br/>
+                {{user.faculty}} {{user.semester}} <sup>th</sup> semester</span>
+            </div>
+        </div>
     </div>
     <div class="flex flex-col items-start">
         <h2 class="text-3xl font-bold mb-4">Assignments</h2>
@@ -41,7 +41,7 @@
             </div>
             <div class="bg-white hover:shadow-lg  rounded-lg">
                 <div class="relative block rounded-md border border-gray-100 p-4 shadow-xl w-[350px] h-[250px] overflow-hidden overflow-y-auto"id=about>
-                    <div class=" items-center mt-4 h-full justify-center ">
+                    <div class="items-center mt-4 h-full justify-center ">
                         
                         <h3 class="text-xl font-semi-bold text-teal-600 text-center">
                             Submitted
@@ -68,7 +68,7 @@
                         <div class="pt-2 justify center text-justify">
                             <p>
                                 <b >
-                                  <span class="uppercase rounded-md px-2 py-1 bg-green-800 text-white">{{missed.subject}}</span>
+                                  <span class="uppercase font-semibold rounded-md px-2 py-1 bg-green-800 text-white">{{missed.subject}}</span>
                                 </b>
                                 {{missed}}
                               </p>
