--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -172,7 +172,7 @@
                             <th class=" text-left py-3 px-4 uppercase font-semibold text-sm">Last name</th>
                             <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Email</th>
                             <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Phone Number</th>
-                            <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Adress</th>
+                            <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Address</th>
                             <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Faculty</th>
                                 <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Action</th>
                         </tr>
