again fixed minor changes

--- a/account/templates/sdash.html
+++ b/account/templates/sdash.html
@@ -7,10 +7,10 @@
                 <h1 class="text-3xl darktext font-bold text-center">
                     Welcome {{user.first_name}} {{user.last_name}}
                 </h1>
-                <span class="font-semi-bold text-lg"><br/>
-                {{user.faculty}} {{user.semester}} <sup>th</sup> semester</span>
-            </div>
-        </div>
+                <span class="font-semi-bold text-lg"><br />
+          {{user.faculty}} {{user.semester}} <sup>th</sup> semester</span
+        >
+      </div>
     </div>
     <div class="flex flex-col items-start">
         <h2 class="text-3xl font-bold mb-4">Assignments</h2>
