--- a/account/templates/sdash.html
+++ b/account/templates/sdash.html
@@ -7,8 +7,8 @@
                 <h1 class="text-3xl darktext font-bold text-center">
                     Welcome {{user.first_name}} {{user.last_name}}
                 </h1>
-                <span class="font-semi-bold text-lg"><br />
-          {{user.faculty}} {{user.semester}} <sup>th</sup> semester</span
+                <span class="font-semi-bold text-lg  text-gray-500"><br />
+          {{user.faculty}} Semester {{user.semester}}  </span
         >
       </div>
     </div>
@@ -25,8 +25,8 @@
                          {% for key,values in assignments.items %}
                          {% for value in values %}
                         <div class=" pt-2 justify center text-justify">
-                            <div class="flex">
-                                <a href="{% url 'file-download' value.assignment_file %}"><b>{{key}}</b>  {{value}} </a>
+                            <div class="flex items-center justify-between">
+                                <a href="{% url 'file-download' value.assignment_file %}"><b><span class="uppercase font-bold rounded-md px-2 py-1 ">{{key}} </span></b>  {{value}} </a>
                                 <button hx-post="/submit_assignment/{{value.id}}" hx-target="body">
                                     <svg style="color: rgb(0, 137, 123);" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"> <path fill-rule="evenodd" clip-rule="evenodd" d="M0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15 11.6421 11.6421 15 7.5 15C3.35786 15 0 11.6421 0 7.5ZM7.0718 10.7106L11.3905 5.31232L10.6096 4.68762L6.92825 9.2893L4.32012 7.11586L3.67993 7.88408L7.0718 10.7106Z" fill="#00897b"></path> </svg>
                                 </button>
@@ -48,7 +48,7 @@
                         </h3>
                         {% for submitted in submitted_assignments %}
                         <div class="pt-2 justify center text-justify">
-                            <p class="font-semibold"> <b>{{submitted.subject}}</b>  {{submitted}} </p>
+                            <p> <b> <span class="uppercase font-bold rounded-md px-2 py-1 ">{{submitted.subject}} </span></b>  {{submitted}} </p>
                             <hr>
                             <br>
 
@@ -68,7 +68,7 @@
                         <div class="pt-2 justify center text-justify">
                             <p>
                                 <b >
-                                  <span class="uppercase font-semibold rounded-md px-2 py-1 bg-green-800 text-white">{{missed.subject}}</span>
+                                  <span class="uppercase font-bold rounded-md px-2 py-1 ">{{missed.subject}}</span>
                                 </b>
                                 {{missed}}
                               </p>
