--- a/faculty/templates/teacher_list.html
+++ b/faculty/templates/teacher_list.html
@@ -1,10 +1,8 @@
-{% include 'navbar.html' %}
-
-{% comment %} <button hx-get="/add_account/teacher/0" hx-target="body" class="rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600">Add account</button> {% endcomment %}
+{% include 'navbar.html' %} {% comment %} <button hx-get="/add_account/teacher/0" hx-target="body" class="rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600">Add account</button> {% endcomment %}
 
 
 <div class="md:px-32 py-8 w-full h-auto flex items-center justify-center pt-10 mb-20 lg:mb-0 ">
-    <div class="shadow overflow-hidden rounded border-b border-gray-200" >
+    <div class="shadow overflow-hidden rounded border-b border-gray-200">
         <div class="overflow-x-auto">
             <table class="w-full table-auto">
                 <thead class="bg-gray-800 text-white">
@@ -16,7 +14,7 @@
                         <th class="w-1/6 text-left py-3 px-4 uppercase font-semibold text-sm">Phone Number</th>
                         <th class="w-1/6 text-left py-3 px-4 uppercase font-semibold text-sm">Adress</th>
                         <th class="w-1/6 text-left py-3 px-4 uppercase font-semibold text-sm">Faculty</th>
-                        
+
                     </tr>
                 </thead>
                 <tbody class="text-gray-700">
@@ -29,17 +27,18 @@
                         <td class="w-1/6 break-words text-left py-3 px-4">{{teacher.phone_number}}</td>
                         <td class="w-1/6 break-words text-left py-3 px-4">{{teacher.address}}</td>
                         <td class="w-1/6 break-words text-left py-3 px-4">{{teacher.faculty}}</td>
-                        
+                        <td class="text-left py-3 px-4 md:table-cell">
+                            <a class="hover:text-teal-500" href="{% url 'delete-account' teacher.username%}">Delete</a>
+                        </td>
                     </tr>
+
                     {% endfor %}
                 </tbody>
             </table>
         </div>
-        
+
     </div>
 </div>
 <div class="pt-2 flex justify-center ">
     <button hx-get="/add_account/teacher/0" hx-target="body" class="rounded bg-gray-100 p-2 text-teal-600 font-semibold hover:bg-teal-600 hover:text-white transition">Add account</button>
 </div>
-
-
