--- a/account/templates/tdash.html
+++ b/account/templates/tdash.html
@@ -11,46 +11,104 @@
             </div>
         </div>
         {% for subject in teacher.subject_set.all %}
-        <div class="main-container bg-gray-50 p-8 rounded-lg">
+        <div>
+            <h2 class="text-gray-600 text-3xl font-semibold pt-1 mb-1 text-center uppercase">{{subject}}</h2>
+            <div class="main-container bg-gray-50 p-1 rounded-lg h-[300px] overflow-hidden overflow-y-auto" id="about">
 
-            <h2 class="text-3xl font-semibold pt-2 mb-4 text-center">{{subject}}</h2>
-            <div class="flex justify-end"><a href="" class="  text-black px-4 py-2 rounded-lg underline">Students</a></div>
-            <div class="flex justify-between gap-8">
-                <div class="rounded-lg flex-grow">
-                    <div class="flex flex-col pt-4 items-center h-[250px]">
-                        <h3 class="text-xl font-semibold text-teal-600 mb-4">Assignments</h3>
-                        <ul>
-                            {% for assignment in subject.assignment_set.all %}
-                            <li><a href="">{{assignment}}</a></li>
+                
+                <div class="flex justify-end"><a href="" class="  text-black hover:text-teal-600 px-4 py-2 rounded-lg underline">Students</a></div>
+                <div class="flex justify-between gap-8  " >
+                    <div class="rounded-lg flex-grow">
+                        <div class="flex flex-col pt-4 items-center ">
+                            <h3 class="text-xl font-semibold text-teal-600 mb-4">Assignments</h3>
+                            <ul>
+                                {% for assignment in subject.assignment_set.all %}
+                                <li><a href="">{{assignment}}</a></li>
 
 
-                            {% endfor %}
-                        </ul>
-                        <div class="flex flex-col items-center">
-                            <form method="POST">
-                                {% csrf_token %}
-                                <input type="text" name="notice" placeholder="Enter Assignment" class="focus:ring-teal-500 focus:border-teal-500">
-                                <button type="submit" class="rounded bg-gray-400 text-white px-4 py-2 mt-4 ">Submit</button>
-                            </form>
+                                {% endfor %}
+                            </ul>
+                            <div class="pt-2 justify center text-justify">
+                                <p>
+                                    <b >
+                                    <span class="uppercase font-bold px-2 py-1 ">Subject</span>
+                                    </b>
+                                    this is your homework
+                                </p>
+                                <hr>
+                                <br>
+                            </div>
+                            <div class="flex  items-center">
+                                
+                                    
+                                    <a href="#" class="rounded bg-gray-400 text-white px-4 py-2 mt-4 hover:text-black showAssign">Add assignment</a>
+                                
+                                <div class="myAssign h-screen w-full fixed z-10 inset-0 overflow-y-auto left-0 top-0  justify-center items-center bg-black bg-opacity-50 hidden 
+                                ">
+                                    <div class="bg-white rounded shadow-lg w-1/3">
+
+                                        <form class="space-y-6" method="POST" id="assignment">
+                                            {% csrf_token %}
+                                            <div class="p-3">
+
+                                                <div>
+                                                    <label for="title" class="block mb-2 text-sm font-medium text-black ">Title</label>
+                                                    <input type="title" name="title" id="title" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5" required>
+                                                </div>
+                                                <div>
+                                                    <label for="start-date" class="block mb-2 text-sm font-medium text-black ">Start date</label>
+                                                    <input type="date" name="start-date" id="start-date" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5" required>
+                                                    
+
+                                                </div>
+                                                <div>
+                                                    <label for="deadline" class="block mb-2 text-sm font-medium text-black ">Deadline</label>
+                                                    <input type="date" name="deadline" id="deadline" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5" required>
+                                                </div>
+                                                <div>
+                                                    <label for="file" class="block mb-2 text-sm font-medium text-black ">File</label>
+                                                    <input type="file" name="file" id="file" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5" required>
+                                                </div>
+
+                                            </div>
+                                            <div class="flex justify-end items-center w-100 border-t p-3">
+                                                <button type="button" class="bg-gray-400  px-3 py-1 rounded text-white mr-1 closeAssign">Cancel</button>
+                                                <button class="bg-teal-600 hover:bg-teal-700 px-3 py-1 rounded text-white">Submit</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+
+                                
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="rounded-lg flex-grow border-l-4 pl-8">
+                        <div class="flex flex-col pt-4 items-center h-[250px]">
+                            <h3 class="text-xl font-semibold text-teal-600 mb-4">Notice Board</h3>
+                            <div class="pt-2 justify center text-justify">
+                                <p>
+                                    
+                                    here should be a notice
+                                </p>
+                                <hr>
+                                <br>
+                            </div>
+                            <div class="flex flex-col items-center">
+                                <form method="POST">
+                                    {% csrf_token %}
+                                    <input type="text" name="notice" placeholder="Enter Notice" class="focus:ring-teal-500 focus:border-teal-500 rounded-md">
+                                    <button type="submit" class="rounded bg-gray-400  text-white px-4 py-2 mt-4 hover:text-black">Submit</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="rounded-lg flex-grow border-l pl-8">
-                    <div class="flex flex-col pt-4 items-center h-[250px]">
-                        <h3 class="text-xl font-semibold text-teal-600 mb-4">Notice Board</h3>
-                        <div class="flex flex-col items-center">
-                            <form method="POST">
-                                {% csrf_token %}
-                                <input type="text" name="notice" placeholder="Enter Notice" class="focus:ring-teal-500 focus:border-teal-500">
-                                <button type="submit" class="rounded bg-gray-400  text-white px-4 py-2 mt-4 ">Submit</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+
             </div>
-
+            {% endfor %}
         </div>
-        {% endfor %}
 
 
 </section>
@@ -74,6 +132,26 @@
         -ms-overflow-style: none;
     }
 </style>
+
+<script>
+    const myAssign = document.querySelector('.myAssign');
+    const showassign = document.querySelector('.showAssign');
+    const closeassign = document.querySelector('.closeAssign');
+
+    showassign.addEventListener('click', function() {
+        myAssign.classList.remove('hidden');
+        myAssign.classList.add('flex');
+    });
+
+    closeassign.addEventListener('click', function() {
+        myAssign.classList.add('hidden');
+        myAssign.classList.remove('flex');
+    });
+</script>
+
+
+
+
 
 
 
