--- a/faculty/templates/add_assignment.html
+++ b/faculty/templates/add_assignment.html
@@ -1,4 +1,4 @@
-<form method="POST" enctype="multipart/form-data" hx-post="/add_assignment/{{subject}}/">
+<form method="POST" enctype="multipart/form-data" hx-post="/add_assignment/{{subject}}/" hx-target="body">
     {% csrf_token %} {{form.title.label}} {{form.title}}
     <p></p> {{form.start_date.label}} {{form.start_date}}
     <p></p>{{form.deadline.label}} {{form.deadline}}
