edited form of assignment

--- a/account/templates/tdash.html
+++ b/account/templates/tdash.html
@@ -36,7 +36,7 @@
                             <div class="flex  items-center">
 
 
-                                <button hx-get="/add_assignment/{{subject}}" hx-target="#{{subject}}">Add assignment </button>
+                                <button class="rounded bg-gray-400  text-white px-4 py-2 mt-4 hover:text-black" hx-get="/add_assignment/{{subject}}" hx-target="#{{subject}}">Add assignment </button>
 
                                 <div class="myAssign h-screen w-full fixed z-10 inset-0 overflow-y-auto left-0 top-0  justify-center items-center bg-black bg-opacity-50 hidden 
                                 ">
